# HackyClock

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
apps/clock/: CMakeLists.txt  clock_app.c  clock_app.h
apps/ha_mqtt_light/: CMakeLists.txt  Kconfig.projbuild  ha_mqtt_light.c  ha_mqtt_light.h
apps/sin_wave/: CMakeLists.txt  sin_wave.c  sin_wave.h
apps/weather/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  weather_app.c  weather_app.h
apps/wifi_status/: CMakeLists.txt  wifi_status_app.c  wifi_status_app.h
fatfs_image/weather/: cloudly.qoi  heavy_rain.qoi  light_rain.qoi  partly_cloudly.qoi  snowy.qoi  sunny.qoi  thunderstorm.qoi
fatfs_image/wifi/: empty.qoi  level1.qoi  level2.qoi  level3.qoi  level4.qoi
main/: CMakeLists.txt  Kconfig.projbuild  animations.c  app_manager.c  apps.h  canvas.c  fonts.c  framebuffer.c  http_api.c  http_client.c  idf_component.yml  image_utils.c  input.c  main.c  mqtt.c
main/include/: animations.h  app_manager.h  canvas.h  fonts.h  framebuffer.h  http_api.h  http_client.h  image_utils.h  input.h  mqtt.h
