idf_component_register(SRCS "main.c"
                            "framebuffer.c"
                            "canvas.c"
                            "app_manager.c"
                            "fonts.c"
                            "image_utils.c"
                    INCLUDE_DIRS "." "include" "../external/qoi")
